Fix overflow causing huge scrolling y

--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ button {
   bottom:0;
   left:0;
   z-index: 1;
+  overflow: hidden;
 }
 
 .wave {
